@@ -1,5 +1,6 @@
 package org.jsoup.helper;
 
+import org.jsoup.Jsoup;
 import org.junit.Test;
 
 import java.util.Arrays;
@@ -72,5 +73,14 @@ public class StringUtilTest {
         assertTrue(check1 == StringUtil.normaliseWhitespace(check1));
         assertTrue(check2 != StringUtil.normaliseWhitespace(check2));
         assertTrue(check3 != StringUtil.normaliseWhitespace(check3));
+    }
+
+    @Test public void normaliseWhiteSpaceHandlesHighSurrogates() {
+        String test71540chars = "\ud869\udeb2\u304b\u309a  1";
+        String test71540charsExpectedSingleWhitespace = "\ud869\udeb2\u304b\u309a 1";
+
+        assertEquals(test71540charsExpectedSingleWhitespace, StringUtil.normaliseWhitespace(test71540chars));
+        String extractedText = Jsoup.parse(test71540chars).text();
+        assertEquals(test71540charsExpectedSingleWhitespace, extractedText);
     }
 }
